 # [#21187] Template styles filter does not display admin templates

29-Jun-2010 Jean-Marie Simonet
 # [#20836] Capitalization of "toolbar-popup-Popup". Thanks Matt. + some
 # [#21224] Alias has trailing dash when there is a space following the word
 # [#21231] Search Component Using the same variable. Thanks Bill.
 # [#21233] New Category Image Window Not 100%. Thanks Bill.

-------------------- 1.6.0 Beta4 Release [28-Jun-2010] ------------------

28-Jun-2010 Ian MacLennan
 # [#21180] [IE8] Cannot create new menu due to JS error
 # [#21197] session timeout while editing article in backend, keepalive issue
 # [#21201] Warning to change name of htaccess.txt when selecting mod_rewrite is missing
 # [#21213] mod_syndicate class missing
 # [#21209] Mod_stats missing class
 # [#21136] Missing JBrowser isMobile
 # [#20844] jimport does not work with non-system libraries
 # [#20828] Module Manager : All checkboxes must be selected when choosing "on all pages" in "Menu Assignment"
 # [#15296] JHTML::tooltip alt attribute for image tooltips
 # [#21202] Menu assignments showing in admin modules in Hathor
 # [#21205] Formatting front end weblink submit form
 # [#21135] Contacts insert as first item in backend
 # [#20713] List of weblinks categories is empty for all categories except the root
 # [#21142] Cancel Submit a Web Link redirects wrong
 # [#20315] com_newsfeed doesnt check for catid when saving
 # [#21204] Can't remember the language selection during install

28-Jun-2010 Jean-Marie Simonet
 # Correcting beez5 typos
 $ Correcting duplicate strings from 20602
 # [#21198] Ordering by group broken in modal. Thanks Phil.
 # [#21198] Added Hathor to the patch.
 # [#21210] Implementing user group ordering in User Manager
 $ Correcting typo

27-Jun-2010 Mark Dexter
 # [#20372] components options (IE 8 test)
 # [#20793] FTP installation features not working as expected
 # Fix checkall toggle bug in User Manager caused by [#20372] 