@@ -198,6 +198,25 @@ JGLOBAL_ARTICLE_MUST_HAVE_TEXT="Article must have some text"
 JGLOBAL_ARTICLE_ORDER_DESC="The order that articles will show in."
 JGLOBAL_ARTICLE_ORDER_LABEL="Article Order"
 JGLOBAL_ARTICLES="Articles"
+JGLOBAL_AUTH_ACCESS_DENIED="Access Denied"
+JGLOBAL_AUTH_ACCESS_GRANTED="Access Granted"
+JGLOBAL_AUTH_BIND_FAILED="Failed binding to LDAP server"
+JGLOBAL_AUTH_CANCEL="Authentication cancelled"
+JGLOBAL_AUTH_EMPTY_PASS_NOT_ALLOWED="Empty password not allowed"
+JGLOBAL_AUTH_ERROR="Authentication error : could not connect to the openid server"
+JGLOBAL_AUTH_FAIL="Authentication failed"
+JGLOBAL_AUTH_FAILED="Failed to authenticate: %s"
+JGLOBAL_AUTH_INVALID_PASS="Invalid password"
+JGLOBAL_AUTH_NO_BIND="Unable to bind to LDAP"
+JGLOBAL_AUTH_NO_CONNECT="Unable to connect to LDAP server"
+JGLOBAL_AUTH_NO_REDIRECT="Could not redirect to server: %s"
+JGLOBAL_AUTH_NO_USER="User does not exist"
+JGLOBAL_AUTH_NOT_CREATE_DIR="Could not create the FileStore directory %s. Please check the effective permissions."
+JGLOBAL_AUTH_PASS_BLANK="LADP can not have blank password"
+JGLOBAL_AUTH_UNCORRECT="Incorrect username/password"
+JGLOBAL_AUTH_UNKNOWN_ACCESS_DENIED="Result Unknown. Access Denied"
+JGLOBAL_AUTH_USER_BLACKLISTED="User is blacklisted"
+JGLOBAL_AUTH_USER_NOT_FOUND="Unable to find user"
 JGLOBAL_AUTHOR_ALPHABETICAL="Author Alphabetical"
 JGLOBAL_AUTHOR_REVERSE_ALPHABETICAL="Author Reverse Alphabetical"
 JGLOBAL_AUTO="Auto"
